--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -5,6 +5,7 @@
   height: 143px;
 
 }
+
 .header-bar {
   margin: 0 auto;
   display: flex;
@@ -13,6 +14,7 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   background: #386fcb;
+
   li {
     // min-width: 135px;
     height: 63px;
@@ -20,10 +22,12 @@
     flex: 1 0 auto;
     background: linear-gradient(180deg, #0355E0 0%, #386FCB 14%, #386FCB 100%);
     text-align: center;
+
     &.active,
     &:hover {
       background: linear-gradient(180deg, #0C4FAE 0%, #156AB2 14%, #1250A7 100%);
     }
+
     a {
       display: inline-block;
       font-size: 21px;
@@ -33,17 +37,192 @@
       height: 100%;
       color: #fff;
     }
+
     &:not(:last-child) a {
       // border-right: 1px solid #979797;
     }
 
   }
 }
+
 .header-asss {
   width: 100%;
   background: #386fcb;
 }
+
 .header {
   width: 100%;
   margin: 0 auto;
+}
+
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+p,
+blockquote,
+pre,
+hr,
+figure,
+table,
+caption,
+th,
+td,
+form,
+fieldset,
+legend,
+input,
+button,
+textarea,
+menu {
+  margin: 0;
+  padding: 0;
+}
+
+header,
+footer,
+section,
+article,
+aside,
+nav,
+hgroup,
+address,
+figure,
+figcaption,
+menu,
+details {
+  display: block;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+caption,
+th {
+  text-align: left;
+  font-weight: normal;
+}
+
+html,
+body,
+fieldset,
+img,
+iframe,
+abbr {
+  border: 0;
+}
+
+i,
+cite,
+em,
+var,
+address,
+dfn {
+  font-style: normal;
+}
+
+[hidefocus],
+summary {
+  outline: 0;
+}
+
+li {
+  list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+small {
+  font-size: 100%;
+}
+
+sup,
+sub {
+  font-size: 83%;
+}
+
+pre,
+code,
+kbd,
+samp {
+  font-family: inherit;
+}
+
+q:before,
+q:after {
+  content: none;
+}
+
+textarea {
+  overflow: auto;
+  resize: none;
+}
+
+label,
+summary {
+  cursor: default;
+}
+
+a,
+button {
+  cursor: pointer;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+em,
+strong,
+b {
+  font-weight: bold;
+}
+
+del,
+ins,
+u,
+s,
+a,
+a:hover {
+  text-decoration: none;
+}
+
+body,
+textarea,
+input,
+button,
+select,
+keygen,
+legend {
+  font: 12px ;
+  color: #333;
+  outline: 0;
+}
+
+body {
+  background: #fff;
+}
+
+a,
+a:hover {
+  color: #333;
 }
