refactor(login): fix login

--- a/src/routes/manage/main/index.less
+++ b/src/routes/manage/main/index.less
@@ -37,7 +37,7 @@
         font-size: 24px;
         font-weight: 600;
         font-family: "Microsoft YaHei","SimHei";
-        color:#ffffff
+        color:#ffffff;
     }
       .white {
           color: white
@@ -84,4 +84,9 @@
   .title{
       margin:0 auto;
       text-align: center
+  }
+  .ant-menu-dark{
+     span{
+         color: #ffffff;
+     }
   }
