--- a/src/routes/manage/account/index.css
+++ b/src/routes/manage/account/index.css
@@ -58,7 +58,7 @@
 :global(.index__renderPsw___2joir .ant-btn) {
   margin-left: 31px;
 }
-.saveBtn {
+.oper-saveBtn {
   width: 120px;
   height: 40px;
   margin-bottom: 20px;
