--- a/src/routes/manage/user/index.css
+++ b/src/routes/manage/user/index.css
@@ -8,7 +8,11 @@
         align-items: center;
         /* border-bottom:  1px solid #979797; */
 }
-.alter {
+.user-alter {
+    display: flex;
+    justify-content: center;
+}
+.user-form {
     display: flex;
     justify-content: center;
 }
