--- a/src/routes/manage/context/create/index.css
+++ b/src/routes/manage/context/create/index.css
@@ -2,13 +2,13 @@
   margin-top: 20px;
 }
 
-.bottomButton {
-
+.tag {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .title {
   font-size: 22px;
-
   color: #1B1B1B;
   width:100%;
   display: flex;
@@ -16,10 +16,10 @@
   margin-bottom: 10px;
 }
 .title>span {
-      margin-top: 22px;
-  margin-left: 22px; 
+  margin-top: 22px;
+  margin-left: 22px;
   border-left:  #163E80 solid 5px;
   height: 25px;
-   line-height: 25px; 
+  line-height: 25px;
   padding-left: 5px;
 }
