我又不小心在 dev 写得

--- a/src/routes/article/index.less
+++ b/src/routes/article/index.less
@@ -2,6 +2,11 @@
     width: 1080px;
     margin: 0 auto;
 }
+.allCenter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .article-location{
     height: 34px;
     background: #F9F9F9;
