--- a/src/routes/services/index.less
+++ b/src/routes/services/index.less
@@ -5,7 +5,14 @@
     display: flex;
     justify-content: start;
     width: 1080px;
-    margin:0 auto
+    margin:0 auto;
+    height: 800px;
+    &-slider{
+        width: 200px;
+    }
+    &-main{
+        margin-left: 100px;
+    }
 }
 .services-left{
     width: 191px;
