--- a/src/routes/services/search/index.less
+++ b/src/routes/services/search/index.less
@@ -4,10 +4,13 @@
        line-height: 22px;
        border-top: 1px solid #000000 ;
        margin-top: 10px;
+       display: flex;
+       justify-content: start;
+       width: 800px;
        p{
            padding:15px;
-           display: inline-block;
            margin-left: 20px;
+           width: 250px;
        }
        .second{
            margin-left: 80px;
