--- a/src/components/homeTopics/index.less
+++ b/src/components/homeTopics/index.less
@@ -28,6 +28,12 @@
 .home-topic-li {
     margin-left: 4px;
     margin-top: 8px;
+    &::before {
+        content: "·";
+        color : blue;
+        font-weight: bolder;
+        
+    }
     a {
         font-size: 15px;
         color: black;
