--- a/src/routes/article/index.less
+++ b/src/routes/article/index.less
@@ -20,6 +20,8 @@
     font-size: 24px;
     text-align: center;
     color: #838383;
+    font-size: 24px;
+    color: #386FCB;
 }
 .article-info {
     width: 600px;
