--- a/src/routes/news/index.less
+++ b/src/routes/news/index.less
@@ -65,3 +65,15 @@
     }
     
 }
+.news-header {
+    height: 30px;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
+    span {
+        font-size: 21px;
+        color: #386FCB;
+    }
+
+}
