--- a/src/components/tabs/index.less
+++ b/src/components/tabs/index.less
@@ -2,14 +2,25 @@
   color: #386FCB;
   font-size: 19px;
   margin-bottom: 11px;
+  display:flex;
+  align-items: center;
   a {
     display: inline-block;
-    padding-left: 10px;
+    padding-left: 5px;
     color: #363636;
     &:hover {
       color: #c82d2d;
     }
     font-size: 19px;
+    width:450px; 
+    white-space:nowrap;
+     overflow:hidden; 
+    text-overflow:ellipsis;
+  }
+  &::before {
+    content: "·";
+    color: blue;
+    font-weight: bolder;
   }
 }
 
