--- a/src/routes/message/index.less
+++ b/src/routes/message/index.less
@@ -87,9 +87,21 @@
 .message-header-paper {
     width: 135px;
     height: 50px;
-
     background: url("/img/assest/paper.png");
     position: absolute;
     top: 9px;
     left: 1px;
+}
+.message-article {
+    font-size: 19px;
+    color: #286BCA;
+}
+.message-none {
+    font-size: 24px;
+    color: #386FCB;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100px;
 }
