feat(main): finish

--- a/src/routes/services/search/index.less
+++ b/src/routes/services/search/index.less
@@ -2,7 +2,7 @@
     &-main{
        font-size: 15px;
        line-height: 22px;
-       border-top: 1px solid #000000 ;
+       border-top: 1px solid gray ;
        margin-top: 10px;
        display: flex;
        justify-content: start;
@@ -17,4 +17,8 @@
            width: 577px;
        }
     }
+}
+.one{
+    border-right: 1px solid gray;
+    margin-top: 5px;
 }
