--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -1,9 +1,9 @@
 .home-header {
   // background: linear-gradient(180deg,#CEE4FF 100%, #E8F2FF 100%, #F2F7FD, #FFF 100%);
   // background: url("../../assest/header.png");
-  background: url("/img/编组5.png");
+  background: url("/public/img/编组.png");
   height: 143px;
-
+  width:100%;
 }
 
 .header-bar {
