--- a/src/routes/manage/main/header.less
+++ b/src/routes/manage/main/header.less
@@ -33,3 +33,15 @@
 .ant-layout-content {
   min-height: auto;
 }
+.manage-header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  div {
+    margin-right: 15px;
+  }
+}
+// .ant-layout-header {
+//   display: flex;
+//   justify-content: space-between;
+// }
