--- a/src/routes/manage/block/index.css
+++ b/src/routes/manage/block/index.css
@@ -7,6 +7,7 @@
     justify-content: flex-start;
   }
   .title>span {
+    font-size:22px !important;
         margin-top: 22px;
     /* margin-left: 22px;  */
     border-left:  #163E80 solid 5px;
