--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -1,12 +1,17 @@
 .home-header {
   // background: linear-gradient(180deg,#CEE4FF 100%, #E8F2FF 100%, #F2F7FD, #FFF 100%);
   // background: url("../../assest/header.png");
-  background: url("/public/img/编组.png");
+  background-image: url("/img/tu1.png");
   height: 143px;
   width:100%;
+  position: relative;
+
 }
 
-
+.wxn{
+  position: absolute;
+  top:25px;
+}
 .header-bar {
   margin: 0 auto;
   display: flex;
