回家吃饭了

--- a/src/routes/home/index.less
+++ b/src/routes/home/index.less
@@ -2,12 +2,12 @@
     font-size: 18px;
     color: green;
 }
-* {
-    font-family: STHeitiSC-Medium;
-    font-size: 12px;
-    color: #000000;
-    letter-spacing: 0;
-}
+// * {
+//     font-family: STHeitiSC-Medium;
+//     font-size: 12px;
+//     color: #000000;
+//     letter-spacing: 0;
+// }
 .container {
     .ant-tabs,
     .ant-carousel {
