--- a/src/routes/home/index.less
+++ b/src/routes/home/index.less
@@ -65,3 +65,10 @@
     }
 }
 
+.message-article {
+        width:850px;
+      white-space:nowrap;
+      overflow:hidden; 
+       text-overflow:ellipsis;
+
+}
