--- a/src/components/homeTopics/index.less
+++ b/src/components/homeTopics/index.less
@@ -28,11 +28,14 @@
 .home-topic-li {
     margin-left: 4px;
     margin-top: 8px;
+    width:450px;
+    white-space:nowrap;
+    overflow:hidden; 
+    text-overflow:ellipsis;
     &::before {
         content: "·";
         color : blue;
         font-weight: bolder;
-        
     }
     a {
         font-size: 15px;
