--- a/src/routes/search/index.less
+++ b/src/routes/search/index.less
@@ -27,7 +27,7 @@
   padding-bottom: 3px;
 }
 .index-search-list {
-  padding-left: 144px;
+  padding-left: 44px;
   padding-bottom: 20px;
   margin-bottom: 20px;
   li a {
@@ -54,7 +54,15 @@
   }
 }
 .index-search-list {
+  // padding-right: 100px;
   .arti-title {
+    i {
+      display:inline-block;
+      width:700px;
+      white-space:nowrap;
+      overflow:hidden; 
+      text-overflow:ellipsis;
+    }
     color: #333;
   }
 }
