--- a/src/routes/login/index.less
+++ b/src/routes/login/index.less
@@ -14,9 +14,9 @@
   :global(.login-form-forgot) {
     float: right !important;
   }
-  :global(.login-form-button) {
-    width: 100% !important;
-  }
+  // :global(.login-form-button) {
+  //   width: 100% !important;
+  // }
   .ant-row {
     min-width: 200px !important;
   }
