--- a/src/routes/manage/main/header.less
+++ b/src/routes/manage/main/header.less
@@ -5,6 +5,7 @@
 }
 
 .trigger {
+
   font-size: 18px;
   line-height: 64px;
   margin-left: -24px;
@@ -42,3 +43,17 @@
 //   display: flex;
 //   justify-content: space-between;
 // }
+
+.header-icons {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  float: right;
+  * {
+    display: inline-block !important;
+    width: 20px !important;
+    height: 20px !important;
+  }
+}
+
