--- a/src/routes/manage/components/Pagination/index.css
+++ b/src/routes/manage/components/Pagination/index.css
@@ -12,7 +12,7 @@
   color: rgba(0, 0, 0, 0.65);
 }
 :global(.ant-pagination-options-quick-jumper:after) {
-  content: "\9875";
+  content: "\7b2c\51e0\9875";
   font-size: 19px;
   color: rgba(0, 0, 0, 0.65);
 }
