--- a/src/routes/message/index.less
+++ b/src/routes/message/index.less
@@ -120,7 +120,7 @@
       color: rgba(0, 0, 0, 0.65);
     }
     &:after {
-      content: "\9875";
+      content: "\7b2c\51e0\9875";
       font-size: 19px;
       color: rgba(0, 0, 0, 0.65);
     }
