--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,67 +1,49 @@
 .home-header {
-  // background: linear-gradient(180deg,#CEE4FF 100%, #E8F2FF 100%, #F2F7FD, #FFF 100%);
   background-image: url("/img/tu1.png");
-  // background-image: url("/img/TIM图片20191110185942.png");
-
   height: 143px;
-  width:100%;
+  width: 100%;
   position: relative;
-
 }
-
-.wxn{
+.wxn {
   position: absolute;
-  top:25px;
+  top: 25px;
 }
 .header-bar {
   margin: 0 auto;
   display: flex;
   width: 1080px;
-  // padding: 0 410px;
   flex-flow: row nowrap;
   justify-content: space-between;
   background: #386fcb;
-
-  li {
-    // min-width: 135px;
-    height: 63px;
-    padding: 10px 0;
-    flex: 1 0 auto;
-    background: linear-gradient(180deg, #0355E0 0%, #386FCB 14%, #386FCB 100%);
-    text-align: center;
-
-    &.active,
-    &:hover {
-      background: linear-gradient(180deg, #0C4FAE 0%, #156AB2 14%, #1250A7 100%);
-    }
-
-    a {
-      display: inline-block;
-      font-size: 21px;
-      height: 43px;
-      line-height: 43px;
-      width: 100%;
-      height: 100%;
-      color: #fff;
-    }
-
-    &:not(:last-child) a {
-      // border-right: 1px solid #979797;
-    }
-
-  }
 }
-
+.header-bar li {
+  height: 63px;
+  padding: 10px 0;
+  flex: 1 0 auto;
+  background: linear-gradient(180deg, #0355E0 0%, #386FCB 14%, #386FCB 100%);
+  text-align: center;
+}
+.header-bar li.active,
+.header-bar li:hover {
+  background: linear-gradient(180deg, #0C4FAE 0%, #156AB2 14%, #1250A7 100%);
+}
+.header-bar li a {
+  display: inline-block;
+  font-size: 21px;
+  height: 43px;
+  line-height: 43px;
+  width: 100%;
+  height: 100%;
+  color: #fff;
+}
 .header-asss {
   width: 100%;
   background: #386fcb;
 }
-
 .headers {
   width: 100%;
   margin: 0 auto;
 }
-
 html,
 body,
 h1,
@@ -96,7 +78,6 @@ menu {
   margin: 0;
   padding: 0;
 }
-
 header,
 footer,
 section,
@@ -111,18 +92,15 @@ menu,
 details {
   display: block;
 }
-
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
 caption,
 th {
   text-align: left;
   font-weight: normal;
 }
-
 html,
 body,
 fieldset,
@@ -131,7 +109,6 @@ iframe,
 abbr {
   border: 0;
 }
-
 i,
 cite,
 em,
@@ -140,16 +117,13 @@ address,
 dfn {
   font-style: normal;
 }
-
 [hidefocus],
 summary {
   outline: 0;
 }
-
 li {
   list-style: none;
 }
-
 h1,
 h2,
 h3,
@@ -159,39 +133,32 @@ h6,
 small {
   font-size: 100%;
 }
-
 sup,
 sub {
   font-size: 83%;
 }
-
 pre,
 code,
 kbd,
 samp {
   font-family: inherit;
 }
-
 q:before,
 q:after {
   content: none;
 }
-
 textarea {
   overflow: auto;
   resize: none;
 }
-
 label,
 summary {
   cursor: default;
 }
-
 a,
 button {
   cursor: pointer;
 }
-
 h1,
 h2,
 h3,
@@ -203,7 +170,6 @@ strong,
 b {
   font-weight: bold;
 }
-
 del,
 ins,
 u,
@@ -212,7 +178,6 @@ a,
 a:hover {
   text-decoration: none;
 }
-
 body,
 textarea,
 input,
@@ -224,11 +189,9 @@ legend {
   color: #333;
   outline: 0;
 }
-
 body {
   background: #fff;
 }
-
 a,
 a:hover {
   color: #333;
