--- a/src/routes/home/index.less
+++ b/src/routes/home/index.less
@@ -66,9 +66,16 @@
 }
 
 .message-article {
-        width:850px;
-      white-space:nowrap;
-      overflow:hidden; 
-       text-overflow:ellipsis;
-
+    display: flex;
+    justify-content: space-around;
+p  {
+    display: inline-block;
+    width:700px;
+    white-space:nowrap;
+    overflow:hidden; 
+     text-overflow:ellipsis;
+}
+span {
+    
+}
 }
