--- a/src/routes/message/index.less
+++ b/src/routes/message/index.less
@@ -62,9 +62,10 @@
     span {
         border-bottom: 2px solid #386FCB;
         display: inline-block;
-        height: 30px;
+        // height: 30px;
         font-size: 21px;
         color: #386FCB;
+
         // padding-bottom: 1px;
     }
 }
@@ -85,12 +86,17 @@
     }
 }
 .message-header-paper {
-    width: 135px;
+    width: 160px;
     height: 50px;
-    background: url("/img/assest/paper.png");
+    background: url("/img/bg_h3.png");
     position: absolute;
     top: 9px;
     left: 1px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 20px;
 }
 .message-article {
     font-size: 19px;
