--- a/src/routes/home/index.less
+++ b/src/routes/home/index.less
@@ -79,3 +79,12 @@ span {
     
 }
 }
+
+
+.safe-jjx-a {
+    &::before {
+        content: "\B7";
+        color: red;
+        font-weight: bolder;
+    }
+}
