--- a/src/routes/message/index.less
+++ b/src/routes/message/index.less
@@ -142,3 +142,9 @@
     justify-content: center;
     padding: 5px 0;
   }
+
+.oneMessage {
+    width: 800px;
+    margin: 0 auto;
+    min-height: 600px;
+}
